Begin to parse TLE info in #infile div

--- a/js/testmat.html
+++ b/js/testmat.html
@@ -15,19 +15,13 @@
     <h1>Output</h1>
 
     <h2>Debug</h2>
-    <div id="debug">
-      debug goes here
-    </div>
+    <div id="debug"></div> <!-- can't do self-closing div with innerHTML -->
 
     <h2>fprintf1</h2>
-    <div id="fprintf1">
-      fprintf1 goes here
-    </div>
+    <div id="fprintf1"></div>
 
     <h2>outfile</h2>
-    <div id="outfile">
-      outfile goes here
-    </div>
+    <div id="outfile"></div>
 
     <h1>Other noise</h1>
     <p>Any other noise spewed by app goes here</p>
