--- a/js/testmat.html
+++ b/js/testmat.html
@@ -11,7 +11,7 @@
 1 00005U 58002B   00179.78495062  .00000023  00000-0  28098-4 0  4753
 2 00005  34.2682 348.7242 1859667 331.7664  19.3264 10.82419157413667     0.00      4320.0        360.00
 </pre>
-      
+
     <h1>Output</h1>
 
     <h2>Debug</h2>
@@ -25,8 +25,9 @@
 
     <h1>Other noise</h1>
     <p>Any other noise spewed by app goes here</p>
-    
+
     <!-- put after HTML until I get window.onload working right -->
+    <script src="compat.js" type="text/javascript"></script>
     <script src="testmat.js" type="text/javascript"></script>
 
   </body>
