Separate out isequalRel so it can be used in all tests.

--- a/js/rv2coe_test.html
+++ b/js/rv2coe_test.html
@@ -10,6 +10,7 @@
     </script>
 
     <!-- Your project file goes here -->
+    <script type="text/javascript" src="test_utils.js">  </script> <!-- for isequalRel -->
     <script type="text/javascript" src="mag.js">         </script> <!-- for mag -->
     <script type="text/javascript" src="math_utils.js">  </script> <!-- for cross -->
     <script type="text/javascript" src="constmath.js">   </script> <!-- for small -->
