Add a ton more tests from MATLAB output

--- a/js/days2mdh_test.html
+++ b/js/days2mdh_test.html
@@ -10,6 +10,7 @@
     </script>
 
     <!-- Your project file goes here -->
+    <script type="text/javascript" src="test_utils.js">         </script>
     <script type="text/javascript" src="jday.js">               </script>
     <script type="text/javascript" src="days2mdh.js">           </script>
     <!-- Your tests file goes here -->
