getgrav tests for MATLAB and JS

--- a/js/getgravc_test.html
+++ b/js/getgravc_test.html
@@ -11,13 +11,10 @@
     </script>
 
     <!-- Your project file goes here -->
-    <script type="text/javascript"
-            src="getgravc.js">
-    </script>
+    <script type="text/javascript" src="test_utils.js">     </script>
+    <script type="text/javascript" src="getgravc.js">       </script>
     <!-- Your tests file goes here -->
-    <script type="text/javascript"
-            src="getgravc_test.js">
-    </script>
+    <script type="text/javascript" src="getgravc_test.js">  </script>
 
   </head>
   <body>
