--- a/js/gstime_test.html
+++ b/js/gstime_test.html
@@ -10,6 +10,7 @@
     </script>
 
     <!-- Your project file goes here -->
+    <script type="text/javascript" src="test_utils.js">       </script>
     <script type="text/javascript" src="gstime.js">           </script>
     <!-- Your tests file goes here -->
     <script type="text/javascript" src="gstime_test.js">      </script>
