--- a/js/jday_test.html
+++ b/js/jday_test.html
@@ -10,13 +10,10 @@
     </script>
 
     <!-- Your project file goes here -->
-    <script type="text/javascript"
-            src="jday.js">
-    </script>
+    <script type="text/javascript" src="test_utils.js">  </script>
+    <script type="text/javascript" src="jday.js">        </script>
     <!-- Your tests file goes here -->
-    <script type="text/javascript"
-            src="jday_test.js">
-    </script>
+    <script type="text/javascript" src="jday_test.js">   </script>
 
   </head>
   <body>
