MATLAB and JS tests from testmat run.
Yeah, a bit gratuitous.

--- a/js/mag_test.html
+++ b/js/mag_test.html
@@ -10,6 +10,7 @@
     </script>
 
     <!-- Your project file goes here -->
+    <script type="text/javascript" src="test_utils.js">    </script>
     <script type="text/javascript" src="mag.js">           </script>
     <!-- Your tests file goes here -->
     <script type="text/javascript" src="mag_test.js">      </script>
