--- a/js/twoline2rv.html
+++ b/js/twoline2rv.html
@@ -1,23 +1,26 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title>QUnit Test Suite</title>
+    <!-- http://github.com/jquery/qunit/raw/master/qunit/qunit.css -->
+    <link rel="stylesheet" type="text/css" media="screen"
+          href="http://code.jquery.com/qunit/qunit-git.css"/>
+    <script type="text/javascript"
+            src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js">
+    </script>
+
+    <!-- Your project file goes here -->
+    <script type="text/javascript" src="test_utils.js">  </script> <!-- for isequalRel -->
+    <script type="text/javascript" src="twoline2rv.js">      </script>
+    <!-- Your tests file goes here -->
+    <script type="text/javascript" src="twoline2rv_test.js"> </script>
+
   </head>
-
   <body>
-    <h1>twoline2rv tests</h1>
-
-    <h2>debug</h2>
-    <div id="debug"></div>
-
-    <h2>fprintf1</h2>
-    <div id="fprintf1"></div>
-
-    <h2>outfile</h2>
-    <div id="outfile"></div>
-
-    <!-- put after HTML until I get window.onload working right -->
-    <script src="compat.js" type="text/javascript"></script>
-    <script src="twoline2rv.js" type="text/javascript"></script>
-    
-
+    <h1 id="qunit-header">QUnit Test Suite</h1>
+    <h2 id="qunit-banner"></h2>
+    <div id="qunit-testrunner-toolbar"></div>
+    <h2 id="qunit-userAgent"></h2>
+    <ol id="qunit-tests"></ol>
   </body>
 </html>
