Make QUnit local for speed and working on a plane.

--- a/js/rv2coe_test.html
+++ b/js/rv2coe_test.html
@@ -2,11 +2,8 @@
 <html>
   <head>
     <title>QUnit Test Suite</title>
-    <!-- http://github.com/jquery/qunit/raw/master/qunit/qunit.css -->
-    <link rel="stylesheet" type="text/css" media="screen"
-          href="http://code.jquery.com/qunit/qunit-git.css"/>
-    <script type="text/javascript"
-            src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js">
+    <link rel="stylesheet" type="text/css" media="screen" href="qunit-git.css"/>
+    <script type="text/javascript" src="qunit.js">
     </script>
 
     <!-- Your project file goes here -->
