--- a/js/twoline2rv_test.html
+++ b/js/twoline2rv_test.html
@@ -6,6 +6,13 @@
     <script type="text/javascript" src="qunit.js"> </script>
 
     <!-- Your project file goes here -->
+    <script type="text/javascript" src="sgp4.js">  </script>
+    <script type="text/javascript" src="gstime.js">  </script>
+    <script type="text/javascript" src="initl.js">  </script>
+    <script type="text/javascript" src="sgp4init.js">  </script>
+    <script type="text/javascript" src="jday.js">  </script>
+    <script type="text/javascript" src="days2mdh.js">  </script>
+    <script type="text/javascript" src="getgravc.js">  </script>
     <script type="text/javascript" src="test_utils.js">  </script> <!-- for isequalRel -->
     <script type="text/javascript" src="twoline2rv.js">      </script>
     <!-- Your tests file goes here -->
