--- a/js/twoline2rv_test.html
+++ b/js/twoline2rv_test.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="jday.js">  </script>
     <script type="text/javascript" src="days2mdh.js">  </script>
     <script type="text/javascript" src="getgravc.js">  </script>
-    <script type="text/javascript" src="test_utils.js">  </script> <!-- for isequalRel -->
+    <script type="text/javascript" src="test_utils.js">  </script> <!-- for isequalRel, assert, isequal -->
     <script type="text/javascript" src="twoline2rv.js">      </script>
     <!-- Your tests file goes here -->
     <script type="text/javascript" src="twoline2rv_test.js"> </script>
