More functions / files -- starting to get %d %f output

--- a/js/testmat_test.html
+++ b/js/testmat_test.html
@@ -10,6 +10,15 @@
     <!-- <script type="text/javascript" src="dpper.js">  </script> -->
     <!-- <script type="text/javascript" src="dsinit.js">  </script> -->
     <!-- <script type="text/javascript" src="dspace.js">  </script> -->
+    <!-- <script type="text/javascript" src="sprintf.js">  </script> -->
+
+    <script type="text/javascript" src="newtonnu.js">  </script>
+    <script type="text/javascript" src="angl.js">  </script>
+    <script type="text/javascript" src="constmath.js">  </script> <!-- for small -->
+    <script type="text/javascript" src="math_utils.js">  </script> <!-- for cross -->
+    <script type="text/javascript" src="mag.js">  </script>
+    <script type="text/javascript" src="rv2coe.js">  </script>
+    <script type="text/javascript" src="compat.js">  </script> <!-- for debug, outfile, fprintf1 -->
     <script type="text/javascript" src="sgp4.js">  </script>
     <script type="text/javascript" src="gstime.js">  </script>
     <script type="text/javascript" src="initl.js">  </script>
@@ -45,6 +54,15 @@
 2 00005  34.2682 348.7242 1859667 331.7664  19.3264 10.82419157413667     0.00      4320.0        360.00
       </textarea>
     </label>
+
+    <h1>Outputs</h1> <!-- sections for JS to fill with output -->
+    <h2>debug</h2>
+    <div id="debug"></div> 
+    <h2>outfile</h2>
+    <div id="outfile"></div> 
+    <h2>fprintf1</h2>
+    <div id="fprintf1"></div> 
+
 
     <!-- Your tests file goes here MOVE BELOW HTML VARS -->
     <script type="text/javascript" src="testmat_test.js"> </script>
