--- a/js/testmat_test.html
+++ b/js/testmat_test.html
@@ -159,7 +159,7 @@
 1 88888U          80275.98708465  .00073094  13844-3  66816-4 0    87
 2 88888  72.8435 115.9689 0086731  52.6988 110.5714 16.05824518  1058      0.0      1440.0        120.00
 #
-      </textarea>
+      </textarea> <!-- parser must accommodate this blank line -->
     </label>
     <br/>
     <label>Run testmat()
