Cut down some of the TODO bits (more to do, see #15)

--- a/js/testmat_test.html
+++ b/js/testmat_test.html
@@ -60,11 +60,10 @@
     <br/>
     <!-- <label>infilename for TLE data: -->
     <!--   <input id="infilename" type="file" name="files[]" size="64" value="SGP-VER.TLE"></input> -->
-    <!-- </label> <\!-- TODO: does my input() work here? -\-> -->
+    <!-- </label> -->
     <!-- <br/> -->
     <label>TLE Lines<!-- (from infilename, above) -->:
       <br/>
-      <!-- TODO: this won't get picked up by our input() function since it's not an <input> element -->
       <textarea id="tle-lines" rows="97" cols="105">
 #                       # TEME example
 1 00005U 58002B   00179.78495062  .00000023  00000-0  28098-4 0  4753
