--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <canvas id="glCanvas" width="800px" height="800px" tabindex="1"></canvas>
-    <script src="small.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
