--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="cesium.js"></script>
+    <script type="text/javascript" src="issPoints.js"></script>
   </head>
   <body>
     <canvas id="glCanvas" width="800px" height="800px" tabindex="1"></canvas>
