Hack JS together, hack SOT for fixed return.
misunderstanding twoline2rv() where our startmfe goes negative from satellite

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -1,10 +1,25 @@
 <html>
   <head>
+    <script>
+      opsmode = 'i'; //GLOBAL for intl, 'i'mproved
+    </script>
+    <script type="text/javascript" src="../js/twoline2rv.js"></script>
+    <script type="text/javascript" src="../js/getgravc.js"></script>
+    <script type="text/javascript" src="../js/days2mdh.js"></script>
+    <script type="text/javascript" src="../js/jday.js"></script>
+    <script type="text/javascript" src="../js/sgp4init.js"></script>
+    <script type="text/javascript" src="../js/initl.js"></script>
+    <script type="text/javascript" src="../js/gstime.js"></script>
+    <script type="text/javascript" src="../js/sgp4.js"></script>
+
     <script type="text/javascript" src="cesium.js"></script>
     <script type="text/javascript" src="issPoints.js"></script>
   </head>
   <body>
     <canvas id="glCanvas" width="800px" height="800px" tabindex="1"></canvas>
     <script src="index.js" type="text/javascript"></script>
+
+
+
   </body>
 </html>
