Buttons to morph between 3D and 2D view
Very informative display

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -4,6 +4,10 @@
     <script type="text/javascript" src="issPoints.js"></script>
   </head>
   <body>
+    <div id="view_buttons">
+      <button id="view_3d">3D</button>
+      <button id="view_2d">2D</button>
+    </div>
     <canvas id="glCanvas" width="800px" height="800px" tabindex="1"></canvas>
     <script src="index.js" type="text/javascript"></script>
   </body>
