--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -5,10 +5,18 @@
   </head>
   <body>
     <div id="view_buttons">
+      View: 
       <button id="view_3d">3D</button>
       <button id="view_2d">2D</button>
     </div>
-    <canvas id="glCanvas" width="800px" height="800px" tabindex="1"></canvas>
+    <div id="tile_providers">
+      Graphic tile provider:
+      <button id="tile_bing">Bing</button>
+      <button id="tile_osm">OpenStreetMap</button>
+      <button id="tile_single">Static File</button>
+    </div>            
+    
+    <canvas id="glCanvas" width="1000px" height="1000px" tabindex="1"></canvas>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
