--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="../js/gstime.js"></script>
     <script type="text/javascript" src="../js/sgp4.js"></script>
 
+    <script type="text/javascript" src="tle.js"></script>
+
     <script type="text/javascript" src="cesium.js"></script>
     <script type="text/javascript" src="issPoints.js"></script>
   </head>
