Add SGP4 deep space modules needed by some satellites

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -12,6 +12,11 @@
     <script type="text/javascript" src="../js/gstime.js"></script>
     <script type="text/javascript" src="../js/sgp4.js"></script>
 
+    <script type="text/javascript" src="../js/dscom.js"></script>
+    <script type="text/javascript" src="../js/dpper.js"></script>
+    <script type="text/javascript" src="../js/dsinit.js"></script>
+    <script type="text/javascript" src="../js/dspace.js"></script>
+
     <script type="text/javascript" src="tle.js"></script>
 
     <script type="text/javascript" src="cesium.js"></script>
