Buttons to select satellite, but no way to UNselect them.

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -34,6 +34,11 @@
       <button id="tile_osm">OpenStreetMap</button>
       <button id="tile_single">Static File</button>
     </div>
+    <div id="satellites">
+      Satellites:
+      <button id="satellites_science">Science</button>
+      <button id="satellites_geosynchronous">Geosynchronous</button>
+    </div>
 
     <canvas id="glCanvas" width="1000px" height="1000px" tabindex="1"></canvas>
 
