Allow selection of single ISS TLE file

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -36,10 +36,13 @@
     </div>
     <div id="satellites">
       Satellites:
+      <button id="satellites_iss">ISS</button>
       <button id="satellites_stations">Space Stations</button>
       <button id="satellites_science">Science</button>
       <button id="satellites_geosynchronous">Geosynchronous</button>
     </div>
+    <!--From: https://github.com/AnalyticalGraphicsInc/cesium/wiki/CZML-in-Cesium -->
+    <div id="date">Date</div>
 
     <canvas id="glCanvas" width="1000px" height="1000px" tabindex="1"></canvas>
 
