--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -43,6 +43,9 @@
     </div>
     <!--From: https://github.com/AnalyticalGraphicsInc/cesium/wiki/CZML-in-Cesium -->
     <div id="date">Date</div>
+    <div id="position_wrap">Position of first satellite:
+      <span id="position">waiting for first satellite</span>
+    </div>
 
     <canvas id="glCanvas" width="1000px" height="1000px" tabindex="1"></canvas>
 
