Position seems fine but Lat/Lon/Height and Velocity calcs seem wrong.

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -44,7 +44,8 @@
     <!--From: https://github.com/AnalyticalGraphicsInc/cesium/wiki/CZML-in-Cesium -->
     <div id="date">Date</div>
     <div id="position_wrap">Position of first satellite:
-      <span id="position">waiting for first satellite</span>
+      <div id="cartesian">cartesian X,Y,Z...</div>
+      <div id="cartographic">cartographic lon,lat,height...</div>
     </div>
 
     <canvas id="glCanvas" width="1000px" height="1000px" tabindex="1"></canvas>
