Use SMD sats found in TLEs as pick-option

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -36,6 +36,7 @@
     </div>
     <div id="satellites">
       Satellites:
+      <button id="satellites_smd">SMD Science</button>
       <button id="satellites_iss">ISS</button>
       <button id="satellites_stations">Space Stations</button>
       <button id="satellites_science">Science</button>
