Right align numbers for visibility. TODO: left-align Name

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <style>
+      table {border-collapse:collapse;}
+      table td, table th {border:1px solid #888; padding: 3px;}
+      table td {text-align: right;}
+    </style>
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
     </script>
