Detect mouse-over satellite and identify name, XYZ position

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -42,6 +42,10 @@
       <button id="satellites_science">Science</button>
       <button id="satellites_geosynchronous">Geosynchronous</button>
     </div>
+    <div id="satellite_mouseover_wrap">
+      Mouse last over satellite: 
+      <span id="satellite_mouseover">[hover over a satellite]</span>
+    </div>
 
     <canvas id="glCanvas" width="1000px" height="1000px" tabindex="1"></canvas>
 
