--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -27,7 +27,7 @@
     <form id="controls">
       <div id="controls_visual">
         <span>
-          <label>View:
+          <label>Earth View:
             <select id="select_view"> <!-- handler attached by JS -->
               <option value="3D">3D</option>
               <option value="2D">2D</option>
@@ -35,7 +35,7 @@
           </label>
         </span>
         <span>
-          <label>Map provider:
+          <label>Map Provider:
             <select id="select_tile_provider">
               <option value="bing">Bing maps</option>
               <option value="osm">OpenStreetMap</option>
