Fucking case-insensitive Mac

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="tle.js"></script>
 
-    <script type="text/javascript" src="cesium.js"></script>
+    <script type="text/javascript" src="Cesium.js"></script>
     <script type="text/javascript" src="issPoints.js"></script>
   </head>
 
