More case-sensitivity fixes not noticed on OS X filesystem

--- a/cesiumtry/index.html
+++ b/cesiumtry/index.html
@@ -48,7 +48,7 @@
         <span>
           <label>Satellite Group:
             <select id="select_satellite_group">
-              <option value="smd">SMD Science</option>
+              <option value="SMD">SMD Science</option>
               <option value="iss">ISS</option>
               <option value="space-stations">Space Stations</option>
               <option value="science">Science</option>
