--- a/viz/index.html
+++ b/viz/index.html
@@ -10,6 +10,7 @@
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
     </script>
+
     <script type="text/javascript" src="../js/twoline2rv.js"></script>
     <script type="text/javascript" src="../js/getgravc.js"></script>
     <script type="text/javascript" src="../js/days2mdh.js"></script>
@@ -26,7 +27,7 @@
 
     <script type="text/javascript" src="tle.js"></script>
 
-    <script type="text/javascript" src="Cesium.js"></script>
+    <script type="text/javascript" src="cesium/Cesium.js"></script>
   </head>
 
   <body>
