Adding Modernizr script

--- a/viz/index.html
+++ b/viz/index.html
@@ -1,4 +1,12 @@
-<html>
+<!DOCTYPE html>
+<!--
+The "no-js" class is here as a fallback.
+If Modernizr is not running, you'll know
+something is wrong and you will be able to act
+accordingly. In contrast, if everything goes well,
+Modernizr will remove that special class.
+-->
+<html class="no-js">
   <head>
     <title>SOT: Satellite Orbit Tracker</title>
     <link rel="icon" type="image/png" href="Images/Satellite.png"></link>
@@ -28,6 +36,7 @@
     <script type="text/javascript" src="tle.js"></script>
 
     <script type="text/javascript" src="cesium/Cesium.js"></script>
+    <script type="text/javascript" src="static/js/modernizr.js"></script>
   </head>
 
   <body>
